<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/back_button"
            android:theme="@style/ToolbarTheme"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:theme="@style/Title"
        android:layout_marginTop="@dimen/padding80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


    <EditText
        android:id="@+id/usernameRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding48"
        android:layout_marginTop="@dimen/padding80"
        android:layout_marginStart="@dimen/padding16"
        android:layout_marginEnd="@dimen/padding16"
        android:padding="@dimen/padding8"
        android:background="@color/mild_blue_transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:drawableStart="@drawable/username"
        android:drawablePadding="@dimen/padding8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/passwordRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding48"
        android:layout_marginTop="@dimen/padding16"
        android:layout_marginStart="@dimen/padding16"
        android:layout_marginEnd="@dimen/padding16"
        android:padding="@dimen/padding8"
        android:background="@color/mild_blue_transparent"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawableStart="@drawable/password"
        android:drawablePadding="@dimen/padding8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegisterEditText" />

    <EditText
        android:id="@+id/passwordRepeatRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding48"
        android:layout_marginTop="@dimen/padding16"
        android:layout_marginStart="@dimen/padding16"
        android:layout_marginEnd="@dimen/padding16"
        android:padding="@dimen/padding8"
        android:background="@color/mild_blue_transparent"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/repeatPassword"
        android:drawableStart="@drawable/password"
        android:drawablePadding="@dimen/padding8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterEditText" />
    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding32"
        android:layout_marginStart="@dimen/padding16"
        android:layout_marginEnd="@dimen/padding16"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRepeatRegisterEditText" />

    <TextView
        android:id="@+id/goToLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding32"
        android:text="@string/loginHere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>