<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding80"
        android:theme="@style/Title"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/usernameLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding48"
        android:layout_marginTop="@dimen/padding80"
        android:layout_marginStart="@dimen/padding16"
        android:layout_marginEnd="@dimen/padding16"
        android:padding="@dimen/padding8"
        android:drawablePadding="@dimen/padding8"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textColorHint="@color/mild_blue"
        android:drawableStart="@drawable/username"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding48"
        android:layout_marginTop="@dimen/padding16"
        android:layout_marginStart="@dimen/padding16"
        android:layout_marginEnd="@dimen/padding16"
        android:padding="@dimen/padding8"
        android:drawablePadding="@dimen/padding8"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/mild_blue"
        android:drawableStart="@drawable/password"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLoginEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding32"
        android:layout_marginStart="@dimen/padding16"
        android:layout_marginEnd="@dimen/padding16"
        android:text="@string/login"
        android:textAllCaps="true"
        android:background="@drawable/auth_button"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText" />

    <TextView
        android:id="@+id/goToRegisterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding32"
        android:text="@string/registerHere"
        android:textColor="@color/mild_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>

